package cat.udl.eps.softarch.linkapp.domain;

public enum UserRoleEnum {
    ADMIN,
    AUTHORIZED,
    SUBSCRIBED
}
