@startuml

class User {
  username : String
  password : String
  name : String
  email : String
  age: int

}
class OAuth{
}
class Group {
    title : String
    description : String
    visibility : String
}

class Topic {
     topic : String
}

enum UserRoleEnum {
    ADMIN,
    AUTHORIZED,
    SUBSCRIBED
}

class UserRole {
     role : UserRoleEnum
}

class Post {
     text : String
}

class Chatroom {
     text : String
}

class Meet {
    title : String
    description : String
    date : String
    location : String
    maxUsers : int
    initialMeetDate : ZonedDateTime
    finalMeetDate : ZonedDateTime
    lastUpdate : ZonedDateTime
    creationDate : ZonedDateTime
}

User "1" --right-- "*" Chatroom
Meet "1" -- "*" Chatroom
Group "*" --right-- "*" Topic
Group "1" --left-- "*" UserRole
User "1" --right-- "*" UserRole
User "1" --left-- "1" OAuth
Post "0..1" --right-- "*" Post : comment <
User "*" -- "*" Topic : interests >
User "1" --right-- "*" Post
Group "1" -- "*" Post
Group "1" -- "*" Meet
User "*" --right-- "*" Meet : attendance >

@enduml
